--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,6 @@
   ],
   "extends": [
     "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:@typescript-eslint/recommended"
   ]
 }
